# mini-blog

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  config.toml  config.yml
.github/workflows/: build_and_deploy_rust_app.yml
src/: blog.rs  highlight.rs  main.rs  model.rs  setting.rs  web.rs
static/css/: style.css
static/js/: highlight.min.js
static/templates/: category_template.hbs  index_template.hbs  post_template.hbs  tag_template.hbs
