[package]
name = "mini-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

axum = { version = "0.6.20", features = ["macros", "tokio"] }
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
# 为axum增加模板引擎
axum-template = { version = "1.0.0", features = ["handlebars"] }
handlebars = "4.3.7"

chrono = { version = "0.4.26", features = ["serde"] }
# 将Markdown转换为HTml
pulldown-cmark = "0.9.3"
# 为pulldown中的代码块增加语法高亮
highlight-pulldown = "0.2.2"

serde = { version = "1.0.183", features = ["derive"] }
anyhow = "1.0.72"
tower-http = { version = "0.4.3", features = ["fs"] }
config = "0.13.3"
str-utils = "0.1.7"

