[package]
name = "mini-blog"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

axum = { version = "0.7.5", features = ["macros", "tokio"] }
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
# 为axum增加模板引擎
axum-template = { version = "2.3.0", features = ["handlebars"] }
handlebars = { version = "5.1.2", default-features = false }

chrono = { version = "0.4.26", features = ["serde"] }
# 将Markdown转换为HTml
pulldown-cmark = "0.11.0"

serde = { version = "1.0.183", features = ["derive"] }
anyhow = "1.0.72"
tower-http = { version = "0.5.2", features = ["fs"] }
config = "0.14.0"
str-utils = "0.1.7"
thiserror = "1.0.48"
cmark-syntax = "0.5.1"